fix(css): add styling for spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,17 +93,21 @@
 
 /* 3.38 style workspace thumbnails */
 .vertical-overview.workspace-thumbnails {
-	color: #eeeeec;
+	color: #eeeeee;
 	background-color: rgba(32, 32, 32, 0.76);
-	border: 1px solid rgba(255, 255, 255, 0.16);
-	padding: 6px;
-	border-radius: 10px 0 0 10px;
-	border-right-width: 0;
+	padding: 30px;
+	border-radius: 15px;
+	margin: 4px;
+	margin-top: -300px;
+	spacing: 30px;
 }
 
 .workspace-thumbnails {
+	color: #eeeeee;
 	background-color: rgba(32, 32, 32, 0.76);
-	border-radius: 10px;
+	padding: 15px;
+	border-radius: 15px;
 	margin: 4px;
-	spacing: 6px;
+	margin-top: -300px;
+	spacing: 30px;
 }
